[gd_scene load_steps=5 format=3 uid="uid://c8306oe7jpqrn"]

[ext_resource type="Script" path="res://Main.gd" id="1_s532o"]
[ext_resource type="PackedScene" uid="uid://b3wpeowbte5x4" path="res://mob.tscn" id="2_xdd6p"]
[ext_resource type="PackedScene" uid="uid://dgnwmfbvdrpk0" path="res://player.tscn" id="3_5d1gp"]

[sub_resource type="Curve2D" id="Curve2D_aa4pm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 1, 718, 0, 0, 0, 0, 1, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_s532o")
mob_scene = ExtResource("2_xdd6p")

[node name="Player" parent="." instance=ExtResource("3_5d1gp")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_aa4pm")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(1, 0)

[connection signal="hit" from="Player" to="." method="game_over"]
